--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/MarkCirineo/team-profile-generator#readme",
   "dependencies": {
-    "inquirer": "^8.1.5",
+    "inquirer": "^8.1.5"
+  },
+  "devDependencies": {
     "jest": "^27.2.4"
   }
 }
